--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<p>Formulario de datos e información relevante para la institución.</p>
 					<ul class="actions">
 						<li><a href="https://forms.gle/G6uFsw68YtdWkFBA8" class="button primary icon solid fa-download">Ir al Formulario</a></li>
-						<li><a href="#one" class="button icon solid fa-chevron-down scrolly">Guía de llenado</a></li>
+						<li><a href="#one" class="button primary icon solid fa-download">Ver Protocolo Covid-19</a></li>
 					</ul>
 				</div>
 				<div class="image phone"><div class="inner"><img src="images/screen.jpg" alt="" /></div></div>
