--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<!-- Footer -->
 			<footer id="footer">
 				
-				<p class="copyright">&copy; Diseñado por Prof. Juan Ruíz Díaz <a href=""></a></p>
+				<p class="copyright">&copy; Diseñado por Prof. JRD <a href=""></a></p>
 			</footer>
 
 		<!-- Scripts -->
