--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 						<li><a href="https://forms.gle/G6uFsw68YtdWkFBA8" class="button primary icon solid fa-download">Ir al Formulario</a></li>
 						<li><a href="images/Protocolo Escuela Técnica 1.pdf" class="button primary icon solid fa-download">Ver Protocolo Covid-19</a></li>
 						<li><a href="images/Documentación a presentar para inscripción.pdf" class="button primary icon solid fa-download">Documentación para ingreso</a></li>
+					        <li><a href="images/AEC 2019_ TEC1.pdf" class="button primary icon solid fa-download">Acuerdo de Convivencia</a></li>
 					</ul>
 				</div>
 				<div class="image phone"><div class="inner"><img src="images/screen.jpg" alt="" /></div></div>
