--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
 					<h1><a href="#">E.E.T. N°1 BGPE</a></h1>
 					<p>Formulario de datos e información relevante para la institución.</p>
 					<ul class="actions">
-						<li><a href="https://forms.gle/G6uFsw68YtdWkFBA8" class="button primary icon solid fa-download">Ir al Formulario</a></li>
+						<!--<li><a href="https://forms.gle/G6uFsw68YtdWkFBA8" class="button primary icon solid fa-download">Ir al Formulario</a></li>-->
 						<li><a href="images/Protocolo Escuela Técnica 1.pdf" class="button primary icon solid fa-download">Ver Protocolo Covid-19</a></li>
 						<li><a href="images/Documentación a presentar para inscripción.pdf" class="button primary icon solid fa-download">Documentación para ingreso</a></li>
 					        <li><a href="images/AEC 2019_ TEC1.pdf" class="button primary icon solid fa-download">Acuerdo de Convivencia</a></li>
+						<li><a href="https://forms.gle/w7t2uDaYNyL2bvcp7" class="button primary icon solid fa-download">Cuestionario para nuevo ACE</a></li>
 					</ul>
 				</div>
 				<div class="image phone"><div class="inner"><img src="images/screen.jpg" alt="" /></div></div>
