--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 					<ul class="actions">
 						<!--<li><a href="https://forms.gle/G6uFsw68YtdWkFBA8" class="button primary icon solid fa-download">Ir al Formulario</a></li>-->
 						<li><a href="images/Protocolo Escuela Técnica 1.pdf" class="button primary icon solid fa-download">Ver Protocolo Covid-19</a></li>
-						<li><a href="images/Documentación a presentar para inscripción.pdf" class="button primary icon solid fa-download">Documentación para ingreso</a></li>
+						<!--<li><a href="images/Documentación a presentar para inscripción.pdf" class="button primary icon solid fa-download">Documentación para ingreso</a></li>-->
 					        <li><a href="images/AEC 2019_ TEC1.pdf" class="button primary icon solid fa-download">Acuerdo de Convivencia Vigente</a></li>
-						<li><a href="https://forms.gle/w7t2uDaYNyL2bvcp7" class="button primary icon solid fa-download">Ir a Cuestionario para nuevo ACE 2021</a></li>
+						<li><a href="https://forms.gle/w7t2uDaYNyL2bvcp7" class="button primary icon solid fa-download">Ir a Cuestionario para nuevo AEC 2021</a></li>
 					</ul>
 				</div>
 				<div class="image phone"><div class="inner"><img src="images/screen.jpg" alt="" /></div></div>
